--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,8 @@ p {
     width: 100%;
     height: 100%;
     background-color: hsl(277, 64%, 61%);
-    opacity: 0.5;
+    opacity: 0.85;
+    mix-blend-mode: multiply;
     position: absolute;
     z-index: 1;
 }
